syntax = "proto3";
package presence;
option go_package = ".;presence";
import "google/protobuf/empty.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

service Presence {
  rpc Healthz (google.protobuf.Empty) returns (HealthzResponse) {}
  rpc GetUserList (UserListRequest) returns (UserListResponse) {}
  rpc GetUser (UserRequest) returns (UserResponse) {}
  rpc UserRegistration (UserRegistrationRequest) returns (StatusResponse) {}
}

message HealthzResponse {
  string return_message = 1;
}

message UserListRequest {
  string status_code = 1 [(validator.field) = {regex: "^([ABZ])?$"}];
}

message UserRequest {
  string status_code = 1;
  string user_id = 2;
}

message UserRegistrationRequest {
  string email = 1;
  string password = 2;
}

message UserListResponse {
  repeated UserResponse users = 1;
}

message UserResponse {
  string name = 1;
  string email = 2;
}

message StatusResponse {
  string status_code = 1;
}
